Fixed an issue with hover/focus rules persisting too long

--- a/web_app/sdlc-checklist/src/app/app.component.css
+++ b/web_app/sdlc-checklist/src/app/app.component.css
@@ -68,7 +68,7 @@
   box-shadow: 4px 4px 2px 0 rgba(0, 0, 0, .4);
 }
 
-.generate-report:hover, .generate-report:focus {
+.generate-report:hover {
   background-color: #003a63;
   box-shadow: inset 1px 1px 4px 2px rgba(0, 0, 0, .5);
 }
@@ -166,7 +166,7 @@ nav {
   cursor: pointer;
 }
 
-.nav-icon:hover, .nav-icon:focus {
+.nav-icon:hover {
   background-color: #004577;
 }
 
@@ -263,7 +263,7 @@ nav {
   display:flex
 }
 
-.orange:hover, .orange:focus {
+.orange:hover {
   box-shadow: inset 0 0 4px 1px rgb(163, 90, 0);
 }
 
@@ -271,7 +271,7 @@ nav {
   background-color: red;
 }
 
-.red:hover, .red:focus {
+.red:hover {
   box-shadow: inset 0 0 4px 1px rgb(95, 1, 1);
 }
 
@@ -279,7 +279,7 @@ nav {
   background-color: rgb(5, 204, 5);
 }
 
-.green:hover, .green:focus {
+.green:hover {
   box-shadow: inset 0 0 4px 1px rgb(18, 71, 1);
 }
 
